Fixing graalvm build